[package]
name = "goa-oauth2"
version = "1.1.0"
authors = ["Hank Donnay <hdonnay@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
license-file = "COPYING"
description = "A command-line utility for retrieving OAuth2 tokens from GNOME Online Accounts."
repository = "https://github.com/hdonnay/goa-oauth2"
keywords = ["oauth", "oauth2", "gnome", "dbus"]
categorites = ["authentication", "command-line-utilities", "config"]
exclude = ["dbus-interfaces.xml"]

[dependencies]
zbus = "2.1"
zvariant = "2.8"

[dependencies.clap]
version = "2.33"
default-features = false
