[package]
name = "goa-oauth2"
version = "1.1.2"
authors = ["Hank Donnay <hdonnay@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A command-line utility for retrieving OAuth2 tokens from GNOME Online Accounts."
repository = "https://github.com/hdonnay/goa-oauth2"
keywords = ["oauth", "oauth2", "gnome", "dbus"]
categorites = ["authentication", "command-line-utilities", "config"]
exclude = ["dbus-interfaces.xml"]

[dependencies]
zbus = "3.15"
zvariant = "3.15"
clap = "4.4"
